--- a/all_data/all_sequences.ipynb
+++ b/all_data/all_sequences.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 1,
    "id": "b39be082",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 2,
    "id": "0d6dbb7d",
    "metadata": {},
    "outputs": [],
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 3,
    "id": "9dacc7cd",
    "metadata": {},
    "outputs": [],
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 4,
    "id": "64a4b71a",
    "metadata": {},
    "outputs": [],
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 5,
    "id": "ea55d97f",
    "metadata": {},
    "outputs": [],
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 6,
    "id": "5b66c078",
    "metadata": {},
    "outputs": [],
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 7,
    "id": "4e5d7142",
    "metadata": {},
    "outputs": [],
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 8,
    "id": "b77f482b",
    "metadata": {},
    "outputs": [
@@ -468,7 +468,7 @@
        "23      NaN               NaN            96,195            91,099 187,294"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 9,
    "id": "376309c1",
    "metadata": {},
    "outputs": [],
@@ -493,6 +493,36 @@
     "# seq_counts = pd.read_csv('total_sequences.csv', index_col=0)\n",
     "# textable(seq_counts,tabname='total_sequences.tex', FORMAT='%1d')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7577839b",
+   "metadata": {},
+   "source": [
+    "## Save to Excel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "240f03ff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with pd.ExcelWriter('seq_metadata.xlsx') as writer:  \n",
+    "    gisaid_df_ha.to_excel(writer, sheet_name='GISAID HA Sequences')\n",
+    "    gisaid_df_na.to_excel(writer, sheet_name='GISAID NA Sequences')\n",
+    "    ncbi_df_ha.to_excel(writer, sheet_name='NCBI HA Sequences')\n",
+    "    ncbi_df_na.to_excel(writer, sheet_name='NCBI NA Sequences')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c51baab5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
