--- a/all_data/all_sequences.ipynb
+++ b/all_data/all_sequences.ipynb
@@ -510,10 +510,10 @@
    "outputs": [],
    "source": [
     "with pd.ExcelWriter('seq_metadata.xlsx') as writer:  \n",
-    "    gisaid_df_ha.to_excel(writer, sheet_name='GISAID HA Sequences')\n",
-    "    gisaid_df_na.to_excel(writer, sheet_name='GISAID NA Sequences')\n",
-    "    ncbi_df_ha.to_excel(writer, sheet_name='NCBI HA Sequences')\n",
-    "    ncbi_df_na.to_excel(writer, sheet_name='NCBI NA Sequences')"
+    "    gisaid_df_ha.to_excel(writer, sheet_name='GISAID HA Sequences', index=False)\n",
+    "    gisaid_df_na.to_excel(writer, sheet_name='GISAID NA Sequences', index=False)\n",
+    "    ncbi_df_ha.to_excel(writer, sheet_name='NCBI HA Sequences', index=False)\n",
+    "    ncbi_df_na.to_excel(writer, sheet_name='NCBI NA Sequences', index=False)"
    ]
   },
   {
