--- a/paper_data/enet_predictions/dominant_sequences.ipynb
+++ b/paper_data/enet_predictions/dominant_sequences.ipynb
@@ -34,8 +34,8 @@
     "1. Download amino acid data\n",
     "    - Host: Human\n",
     "    - Flu Season example: \n",
-    "        - Northern strains from 11/01/2002 - 5/01/2003\n",
-    "        - Southern strains from 05/01/2003 - 11/01/2003\n",
+    "        - Northern strains from 10/01/2002 - 3/01/2003 for the 2003\n",
+    "        - Southern strains from 03/01/2003 - 10/01/2003\n",
     "        - Flu season dates from [CDC](https://www.cdc.gov/flu/school-business/travelersfacts.htm) and [WHO](https://www.who.int/teams/global-influenza-programme/vaccines/who-recommendations/recommendations-for-influenza-vaccine-composition-archive)\n",
     "    - Segment: HA (4) and NA (6)\n",
     "2. File names for raw data: HEMISPHERE_SEQUENCE_SEGMENT_SEASON\n",
